...
        <scene sceneID="odH-jF-DAS">
            <objects>
                <tabBarController id="f7U-pO-a2V" customClass="TabBarController" customModule="SlideDrawer_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="maa-gw-qfS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="push from left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GxO-ov-UyE">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="push from right" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Zbn-Iv-XEc">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="zoom from left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Eq2-Ta-B14">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="zoom from right" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0ka-o1-MYG">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="mask from left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8d4-6b-4do">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="mask from right" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sbg-Zw-a6r">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="appearDuration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJt-Vp-F84">
                                                    <rect key="frame" x="20" y="11.5" width="119" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="disappearDuration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhE-Du-fbx">
                                                    <rect key="frame" x="20" y="11.5" width="142" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
        <scene sceneID="Ejt-vN-PAg">
            <objects>
                <tableViewController storyboardIdentifier="LeftViewController" id="cJF-AT-YoY" customClass="LeftViewController" customModule="SlideDrawer_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="I8b-l7-sWS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="dismiss" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jys-gm-wMY">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
        <scene sceneID="ISV-Dt-a7U">
            <objects>
                <tableViewController storyboardIdentifier="RightViewController" id="YxV-CW-UMt" customClass="RightViewController" customModule="SlideDrawer_Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="svf-hn-w1O">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
